# coveralls-test

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  build.sh
src/: main.cpp  obj.cpp  obj.h
